# src/EventRegistrar.Backend/Mailing/Bulk/BulkMailController.cs
@@ -1,6 +1,8 @@
 ﻿using EventRegistrar.Backend.Events;
 using EventRegistrar.Backend.Mailing.Templates;
+
 using MediatR;
+
 using Microsoft.AspNetCore.Mvc;
 
 namespace EventRegistrar.Backend.Mailing.Bulk;
@@ -27,15 +29,15 @@ public class BulkMailController : Controller
                              });
     }
 
-    [HttpGet("api/events/{eventAcronym}/bulkMailTemplates")]
-    public async Task<IEnumerable<MailTemplateItem>> GetMailingTemplatesOfRegistration(string eventAcronym)
-    {
-        return await _mediator.Send(new MailTemplatesQuery
-                                    {
-                                        EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
-                                        TemplateGroup = TemplateGroup.BulkMail
-                                    });
-    }
+    //[HttpGet("api/events/{eventAcronym}/bulkMailTemplates")]
+    //public async Task<IEnumerable<BulkMailTemplateItem>> GetMailingTemplatesOfRegistration(string eventAcronym)
+    //{
+    //    return await _mediator.Send(new MailTemplatesQuery
+    //                                {
+    //                                    EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
+    //                                    TemplateGroup = TemplateGroup.BulkMail
+    //                                });
+    //}
 
     [HttpPost("api/events/{eventAcronym}/bulkMailTemplates/{templateKey}/releaseMails")]
     public async Task ReleaseMails(string eventAcronym, string templateKey)
@@ -47,15 +49,15 @@ public class BulkMailController : Controller
                              });
     }
 
-    [HttpPost("api/events/{eventAcronym}/bulkMailTemplates/{mailTemplateId:guid}")]
-    public async Task SaveMailingTemplate(string eventAcronym, [FromBody] MailTemplateItem template,
-                                          Guid mailTemplateId)
-    {
-        await _mediator.Send(new SaveMailTemplateCommand
-                             {
-                                 EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
-                                 Template = template,
-                                 TemplateId = mailTemplateId
-                             });
-    }
+    //[HttpPost("api/events/{eventAcronym}/bulkMailTemplates/{mailTemplateId:guid}")]
+    //public async Task SaveMailingTemplate(string eventAcronym, [FromBody] MailTemplateItem template,
+    //                                      Guid mailTemplateId)
+    //{
+    //    await _mediator.Send(new SaveMailTemplateCommand
+    //                         {
+    //                             EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
+    //                             Template = template,
+    //                             TemplateId = mailTemplateId
+    //                         });
+    //}
 }
