# src/EventRegistrar.Backend/Mailing/Templates/MailTemplatesController.cs
@@ -1,5 +1,7 @@
 ﻿using EventRegistrar.Backend.Events;
+
 using MediatR;
+
 using Microsoft.AspNetCore.Mvc;
 
 namespace EventRegistrar.Backend.Mailing.Templates;
@@ -25,15 +27,15 @@ public class MailTemplatesController : Controller
                                     });
     }
 
-    [HttpGet("api/events/{eventAcronym}/mailTemplates")]
-    public async Task<IEnumerable<MailTemplateItem>> GetMailTemplatesOfRegistration(string eventAcronym)
-    {
-        return await _mediator.Send(new MailTemplatesQuery
-                                    {
-                                        EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
-                                        TemplateGroup = TemplateGroup.AutoGenerated
-                                    });
-    }
+    //[HttpGet("api/events/{eventAcronym}/mailTemplates")]
+    //public async Task<IEnumerable<MailTemplateItem>> GetMailTemplatesOfRegistration(string eventAcronym)
+    //{
+    //    return await _mediator.Send(new MailTemplatesQuery
+    //                                {
+    //                                    EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
+    //                                    TemplateGroup = TemplateGroup.AutoGenerated
+    //                                });
+    //}
 
     [HttpGet("api/events/{eventAcronym}/mails/types")]
     public async Task<IEnumerable<MailTypeItem>> GetMailTypes(string eventAcronym)
@@ -44,15 +46,15 @@ public class MailTemplatesController : Controller
                                     });
     }
 
-    [HttpPost("api/events/{eventAcronym}/mailTemplates")]
-    public async Task SaveMailTemplate(string eventAcronym, [FromBody] MailTemplateItem template)
-    {
-        await _mediator.Send(new SaveMailTemplateCommand
-                             {
-                                 EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
-                                 Template = template
-                             });
-    }
+    //[HttpPost("api/events/{eventAcronym}/mailTemplates")]
+    //public async Task SaveMailTemplate(string eventAcronym, [FromBody] MailTemplateItem template)
+    //{
+    //    await _mediator.Send(new SaveMailTemplateCommand
+    //                         {
+    //                             EventId = await _eventAcronymResolver.GetEventIdFromAcronym(eventAcronym),
+    //                             Template = template
+    //                         });
+    //}
 
     [HttpDelete("api/events/{eventAcronym}/mailTemplates/{mailTemplateId:guid}")]
     public async Task DeleteMailTemplate(string eventAcronym, Guid mailTemplateId)
